# esp32-box

./: README.md
esp32s3-project/ZJChat/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
esp32s3-project/ZJChat/main/: CMakeLists.txt  idf_component.yml  main.c
esp32s3-project/ZJChat/main/app/: app_asr.c  app_asr.h  app_audio.c  app_audio.h  app_openai.c  app_openai.h  app_sr.c  app_sr.h  app_tts.c  app_tts.h  app_wifi.c  app_wifi.h
esp32s3-project/ZJChat/main/ui/custom/: custom.c
lvgl_prjs/empty_ui/: empty_ui.guiguider
lvgl_prjs/empty_ui/custom/: custom.c  custom.h
lvgl_prjs/empty_ui/temp/: board.h  simulator.h
